<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".seviye1katman">

    <Button
        android:id="@+id/seviye11"
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:background="#FFEB3B"
        android:text="@string/seviye11"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seviye12"
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:background="#FFEB3B"
        android:text="@string/seviye12"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/seviye11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seviye13"
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:background="#FFEB3B"
        android:text="@string/seviye13"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seviye12"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seviye14"
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:background="#FFEB3B"
        android:text="@string/seviye14"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seviye11" />

    <Button
        android:id="@+id/seviye15"
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:background="#FFEB3B"
        android:text="@string/seviye15"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/seviye14"
        app:layout_constraintTop_toBottomOf="@+id/seviye12" />

    <Button
        android:id="@+id/seviye16"
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:background="#FFEB3B"
        android:text="@string/seviye16"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seviye15"
        app:layout_constraintTop_toBottomOf="@+id/seviye13" />


</androidx.constraintlayout.widget.ConstraintLayout>