<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    android:backgroundTint="#FFEB3B"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/my_button"
        android:onClick="next2Activity"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/my_button"
        android:onClick="next3Activity"
        android:text="@string/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/buttonYuksekPuan"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/my_button"
        android:onClick="puanActivity"
        android:text="@string/yuksekPuan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/my_button"
        android:onClick="nextActivity"
        android:text="@string/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="70dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="103dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/bangers"
        android:text="@string/textView"
        android:textColor="#FF9900"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>